<resources>
    <string name="app_name">Scimata Knapsack</string>
    <string name="knapsack_problem">Knapsack Problem</string>
    <string name="problem_statement">
        "A thief is robbing a store and can carry a maximal weight of W into his knapsack. There are n items and weight of ith item is wi and the profit of selecting this item is pi. What items should the thief take?"
    </string>
    <string name="problem_detailed">
        "The knapsack problem or rucksack problem is a problem in combinatorial optimization: Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the total value is as large as possible.
        It derives its name from the problem faced by someone who is constrained by a fixed-size knapsack and must fill it with the most valuable items.
        The problem often arises in resource allocation where there are financial constraints and is studied in fields such as combinatorics, computer science, complexity theory, cryptography, applied mathematics, and daily fantasy sports."
    </string>
    <string name="action_settings">Settings</string>
    <string name="scimata_algorithms">Scimata Algorithms</string>
    <string name="problem_statement_title">Problem Statement</string>
    <string name="meaning">Meaning</string>
    <string name="variations_amp_complexities"><![CDATA[Variations & Complexities]]></string>
    <string name="enter_the_capacity_of_knapsack">Enter the capacity of Knapsack:</string>
    <string name="enter_the_no_of_items">Enter the no of items:</string>
    <string name="five">5</string>
    <string name="forty_five">45</string>
    <string name="generate_random_inputs">Generate Random Inputs</string>
    <string name="add_manual_inputs">Add Manual Inputs</string>
    <string name="knapsack_capacity">Knapsack Capacity</string>
    <string name="enter_valid_capacity">Please enter a valid knapsack capacity</string>
    <string name="enter_valid_no_of_items">Please enter a valid no of items</string>
    <string name="enter_valid_input">Please enter a valid knapsack input</string>

    <string name="add_item_title">Add item</string>
    <string name="generate_remaining_randomly">Generate Remaining Randomly</string>
    <string name="next">Next</string>
    <string name="item">Item</string>
    <string name="weight">Weight</string>
    <string name="value">Value</string>
    <string name="show_detailed_results">Show Detailed Results</string>
    <string name="following_items_will_be_selected">Following items will be selected</string>
    <string name="final_weight_xyz_value_pqr">Final Weight = xyz value = pqr</string>
</resources>
